syntax = "proto3";

option csharp_namespace = "ClinicServiceNamespace";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service PetService{
	rpc CreatePet (CreatePetRequest) returns (CreatePetResponse);
	rpc GetPets (GetPetsRequest) returns (GetPetsResponse);
}

message CreatePetRequest {
    int32 clientId = 1;
    string name = 2;
    google.protobuf.Timestamp birthday = 3;
}

message CreatePetResponse {
    google.protobuf.Int32Value petId = 1;
    int32 errCode = 2;
    string errMessage = 3;
}

message GetPetsRequest { }

message Pet {
    int32 petId = 1;
    int32 clientId = 2;
    string name = 3;
    google.protobuf.Timestamp birthday = 4;
}

message GetPetsResponse {
    repeated Pet pets = 1;
    int32 errCode = 2;
    string errMessage = 3;
}
